Celesta 8: upgrade to Java 11  (#632)
* move to Java 11

* jdk 11 everywhere

* fix listing style in Asciidoctor

* remove dbClassName instantiation machinery

* remove the deprecated constructor from cursor

* code cleanup